force-app/main/default/objects/Decade__c/Decade__c.object-meta.xml
<CustomObject>
    <label>Decades</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>