force-app/main/default/objects/Decade__c/fields/HeaderName__c.field-meta.xml
<CustomField>
    <fullName>HeaderName__c</fullName>
    <formula>CASE(Level__c,
1, Name + &apos; рік&apos;,
2, Name + &apos; &apos; + Parent__r.Name + &apos; p.&apos;,
3, Name + &apos;, &apos; + Parent__r.Name + &apos; &apos; + Parent__r.Parent__r.Name + &apos; p.&apos;,
4, Name + &apos;, &apos; + Parent__r.Name + &apos;, &apos; + Parent__r.Parent__r.Name +&apos; &apos; +Parent__r.Parent__r.Parent__r.Name + &apos; p.&apos;,
&apos;Календар&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Період планування</label>
    <type>Text</type>
</CustomField>