force-app/main/default/objects/Decade__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>Decades</relationshipName>
    <type>Lookup</type>
</CustomField>