force-app/main/default/objects/Decade__c/fields/SandID__c.field-meta.xml
<CustomField>
    <fullName>SandID__c</fullName>
    <label>SandID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>