force-app/main/default/objects/Decade__c/fields/ScrapDecadeLimit__c.field-meta.xml
<CustomField>
    <fullName>ScrapDecadeLimit__c</fullName>
    <label>Декадний ліміт брухту, т.</label>
    <summarizedField>ScrapDecadesLimit__c.DayLimit__c</summarizedField>
    <summaryForeignKey>ScrapDecadesLimit__c.DecadeGroup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>