force-app/main/default/objects/Decade__c/fields/ScrapInputsDecade__c.field-meta.xml
<CustomField>
    <fullName>ScrapInputsDecade__c</fullName>
    <label>Декадне надходження (факт), т.</label>
    <summarizedField>ScrapSlotReserve__c.Weight__c</summarizedField>
    <summaryForeignKey>ScrapSlotReserve__c.DecadeLookup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>