force-app/main/default/objects/Decade__c/fields/ScrapLimitsDelta__c.field-meta.xml
<CustomField>
    <fullName>ScrapLimitsDelta__c</fullName>
    <formula>ScrapDecadeLimit__c - ScrapInputsDecade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Залишок лімітів на декаду, т.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>