force-app/main/default/objects/Decade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Decade__c</columns>
    <columns>Date__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>